--- a/package.json
+++ b/package.json
@@ -1,22 +1,29 @@
 {
   "name": "imagemanagement",
-  "version": "0.0.2",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "archiver": "^1.2.0",
+    "async": "^2.1.4",
     "body-parser": "~1.15.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "easyimage": "^2.1.0",
     "ejs": "~2.5.2",
+    "escape-html": "^1.0.3",
     "express": "~4.14.0",
+    "express-session": "^1.11.3",
     "formidable": "^1.0.17",
+    "helmet": "^3.1.0",
     "log4js": "^1.0.1",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
-    "serve-favicon": "~2.3.0",
-    "walk": "^2.3.9"
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "serve-favicon": "~2.3.0"
   }
 }
